gpu/config: Add support for macOS High Sierra

BUG=774309

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Iadfc74843630ef78e708412922eccd0fb2cc137a
Reviewed-on: https://chromium-review.googlesource.com/717658
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Commit-Queue: Corentin Wallez <cwallez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508814}
Former-commit-id: 443334af046a516e6bcd5517ebdd0a7803575fe0