gpu/config/gpu_test_expectations_parser.cc
@@ -45,6 +45,7 @@ enum Token {
   kConfigMacYosemite,
   kConfigMacElCapitan,
   kConfigMacSierra,
+  kConfigMacHighSierra,
   kConfigMac,
   kConfigLinux,
   kConfigChromeOS,
@@ -100,6 +101,7 @@ const TokenInfo kTokenData[] = {
     {"yosemite", GPUTestConfig::kOsMacYosemite},
     {"elcapitan", GPUTestConfig::kOsMacElCapitan},
     {"sierra", GPUTestConfig::kOsMacSierra},
+    {"highsierra", GPUTestConfig::kOsMacHighSierra},
     {"mac", GPUTestConfig::kOsMac},
     {"linux", GPUTestConfig::kOsLinux},
     {"chromeos", GPUTestConfig::kOsChromeOS},
@@ -263,6 +265,7 @@ bool GPUTestExpectationsParser::ParseConfig(
       case kConfigMacYosemite:
       case kConfigMacElCapitan:
       case kConfigMacSierra:
+      case kConfigMacHighSierra:
       case kConfigMac:
       case kConfigLinux:
       case kConfigChromeOS:
@@ -323,6 +326,7 @@ bool GPUTestExpectationsParser::ParseLine(
       case kConfigMacYosemite:
       case kConfigMacElCapitan:
       case kConfigMacSierra:
+      case kConfigMacHighSierra:
       case kConfigMac:
       case kConfigLinux:
       case kConfigChromeOS:
@@ -446,6 +450,7 @@ bool GPUTestExpectationsParser::UpdateTestConfig(GPUTestConfig* config,
     case kConfigMacYosemite:
     case kConfigMacElCapitan:
     case kConfigMacSierra:
+    case kConfigMacHighSierra:
     case kConfigMac:
     case kConfigLinux:
     case kConfigChromeOS:
