gpu/config/gpu_test_expectations_parser_unittest.cc
@@ -24,26 +24,25 @@ static const struct TestOsWithFamily {
   TestOSEntry version;
   TestOSEntry family;
 } kOSVersionsWithFamily[] = {
-  { { "XP", GPUTestConfig::kOsWinXP }, kOsFamilyWin },
-  { { "VISTA", GPUTestConfig::kOsWinVista }, kOsFamilyWin },
-  { { "WIN7", GPUTestConfig::kOsWin7 }, kOsFamilyWin },
-  { { "WIN8", GPUTestConfig::kOsWin8 }, kOsFamilyWin },
-  { { "WIN10", GPUTestConfig::kOsWin10 }, kOsFamilyWin },
-  { { "LEOPARD", GPUTestConfig::kOsMacLeopard }, kOsFamilyMac },
-  { { "SNOWLEOPARD", GPUTestConfig::kOsMacSnowLeopard }, kOsFamilyMac },
-  { { "LION", GPUTestConfig::kOsMacLion }, kOsFamilyMac },
-  { { "MOUNTAINLION", GPUTestConfig::kOsMacMountainLion }, kOsFamilyMac },
-  { { "MAVERICKS", GPUTestConfig::kOsMacMavericks }, kOsFamilyMac },
-  { { "YOSEMITE", GPUTestConfig::kOsMacYosemite }, kOsFamilyMac },
-  { { "ELCAPITAN", GPUTestConfig::kOsMacElCapitan }, kOsFamilyMac },
-  { { "SIERRA", GPUTestConfig::kOsMacSierra }, kOsFamilyMac },
-  { { "LINUX", GPUTestConfig::kOsLinux },
-    { "LINUX", GPUTestConfig::kOsLinux } },
-  { { "CHROMEOS", GPUTestConfig::kOsChromeOS },
-    { "CHROMEOS", GPUTestConfig::kOsChromeOS } },
-  { { "ANDROID", GPUTestConfig::kOsAndroid },
-    { "ANDROID", GPUTestConfig::kOsAndroid } }
-};
+    {{"XP", GPUTestConfig::kOsWinXP}, kOsFamilyWin},
+    {{"VISTA", GPUTestConfig::kOsWinVista}, kOsFamilyWin},
+    {{"WIN7", GPUTestConfig::kOsWin7}, kOsFamilyWin},
+    {{"WIN8", GPUTestConfig::kOsWin8}, kOsFamilyWin},
+    {{"WIN10", GPUTestConfig::kOsWin10}, kOsFamilyWin},
+    {{"LEOPARD", GPUTestConfig::kOsMacLeopard}, kOsFamilyMac},
+    {{"SNOWLEOPARD", GPUTestConfig::kOsMacSnowLeopard}, kOsFamilyMac},
+    {{"LION", GPUTestConfig::kOsMacLion}, kOsFamilyMac},
+    {{"MOUNTAINLION", GPUTestConfig::kOsMacMountainLion}, kOsFamilyMac},
+    {{"MAVERICKS", GPUTestConfig::kOsMacMavericks}, kOsFamilyMac},
+    {{"YOSEMITE", GPUTestConfig::kOsMacYosemite}, kOsFamilyMac},
+    {{"ELCAPITAN", GPUTestConfig::kOsMacElCapitan}, kOsFamilyMac},
+    {{"SIERRA", GPUTestConfig::kOsMacSierra}, kOsFamilyMac},
+    {{"HIGHSIERRA", GPUTestConfig::kOsMacHighSierra}, kOsFamilyMac},
+    {{"LINUX", GPUTestConfig::kOsLinux}, {"LINUX", GPUTestConfig::kOsLinux}},
+    {{"CHROMEOS", GPUTestConfig::kOsChromeOS},
+     {"CHROMEOS", GPUTestConfig::kOsChromeOS}},
+    {{"ANDROID", GPUTestConfig::kOsAndroid},
+     {"ANDROID", GPUTestConfig::kOsAndroid}}};
 
 TestOSEntry GetUnrelatedOS(const TestOSEntry& os) {
   return (os.os & kOsFamilyWin.os) ? kOsFamilyMac : kOsFamilyWin;
